--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,300;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
@@ -31,24 +32,112 @@ body {
   min-height: 100vh;
 }
 
-.animated-header {
-  font-size: 4rem;
-  text-align: center;
-  color: var(--main-color);
-  margin: 2rem;
-  padding: 1rem;
-  letter-spacing: 0.3rem;
-  opacity: 0;
-  animation: fadeIn 2s forwards;
+.header {
+  width: 100%;
+  padding: 2rem 3%;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.animated-header {
+  font-size: 3rem;
+  color: var(--text-color);
+  letter-spacing: 0.3rem;
+}
+
+.movie-header-info {
+  display: flex;
+}
+
+.movie-header-info i {
+  font-size: 3rem;
+  color: var(--text-color);
+}
+.container {
+  display: grid;
+}
+
+.search {
+  position: relative;
+  width: 56px;
+  height: 56px;
+  background-color: var(--main-color);
+  box-shadow: 0 4px 24px hsla(222, 68%, 12%, 0.1);
+  border-radius: 4rem;
+  padding: 10px;
+  overflow: hidden;
+}
+
+.search__input {
+  border: none;
+  outline: none;
+  width: calc(100% - 44px);
+  height: 100%;
+  border-radius: 2rem;
+  padding-left: 14px;
+  font-weight: 500;
+  font-family: "Poppins";
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1.3s;
+}
+
+.search__button {
+  width: 36px;
+  height: 36px;
+  background-color: var(--text-color);
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  margin: auto;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  transition: transform 0.6s cubic-bezier(0.9, 0, 0.3, 0.9);
+}
+
+.search__icon,
+.search__close {
+  color: var(--snd-bg-color);
+  font-size: 1.5rem;
+  position: absolute;
+  transition: opacity 0.5s cubic-bezier(0.9, 0, 0.3, 0.9);
+}
+
+.search__close {
+  opacity: 0;
+}
+
+.show-search {
+  width: 250px;
+}
+
+.show-search .search__input {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.show-search .search__button {
+  transform: rotate(90deg);
+}
+
+.show-search .search__icon {
+  opacity: 0;
+}
+
+.show-search .search__close {
+  opacity: 1;
+}
+
+.filter-result {
+  text-align: center;
+  color: var(--text-color);
+  font-size: 2rem;
 }
 
 .btn {
@@ -63,9 +152,34 @@ body {
   transition: 0.5s ease;
 }
 
-/* .btn:hover {
-  box-shadow: none;
-} */
+.sort-container {
+  color: var(--text-color);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-family: "Poppins";
+  padding: 2rem 3%;
+}
+
+.sort-container label {
+  margin-right: 1rem;
+  font-size: 1.5rem;
+}
+.sort-container select {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+
+  padding: 1em;
+  color: #000;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
+}
+
+.sort-container select option {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
 
 .movie-grid {
   display: grid;
@@ -236,5 +350,11 @@ body {
 @media (max-width: 1200px) {
   html {
     font-size: 55%;
+  }
+}
+
+@media (max-width: 610px) {
+  .show-search {
+    width: 100%;
   }
 }
