--- a/style.css
+++ b/style.css
@@ -27,21 +27,143 @@ html {
 }
 
 body {
+  width: 100%;
+  min-height: 100vh;
+  background: rgb(0, 0, 0);
+  font-family: "Source Serif 4";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background: var(--bg-color);
   color: var(--text-color);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
-.header {
+header {
+  width: 90%;
+  height: 90vh;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 10px 25px -8px #000;
+  position: relative;
+}
+
+header::before {
+  content: "";
+  position: absolute;
   width: 100%;
-  padding: 2rem 3%;
-  background: var(--bg-color);
+  height: 100%;
+  background: url("./mh.jpg") no-repeat center center/cover;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+header::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #000);
+  opacity: 0.9;
+  z-index: -1;
+}
+
+header .video-slider {
+  position: absolute;
+  width: 120%;
+  height: 183%;
+  top: -47%;
+  z-index: -1;
+  clip-path: circle(0% at 0 50%);
+}
+header .video-slider.active {
+  clip-path: circle(150% at 0 50%);
+  transition: 2s ease;
+  transition-property: clip-path;
+}
+
+header nav {
+  width: 100%;
+  height: 10%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  z-index: 100;
+  justify-content: space-between;
+  padding: 0px 50px;
+  border: 1px solid #fff;
+}
+
+header nav .logo_ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+header nav .logo_ul img {
+  width: 90px;
+}
+
+header nav .logo_ul ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+}
+
+header nav .logo_ul ul li {
+  padding: 3px 15px;
+}
+
+header nav .logo_ul ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  transition: 0.3s linear;
+}
+
+header nav .logo_ul ul li a:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+header .content {
+  color: #fff;
+  margin-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  display: none;
+}
+header .content.active {
+  display: block;
+}
+
+header .content h1 {
+  font-size: 50px;
+}
+
+header .content p {
+  font-size: 14px;
+  width: 350px;
+  word-break: break-word;
+}
+
+header .content .details {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+header .content .details h5 {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 12px;
+  margin-right: 10px;
+}
+
+header .content .details h4 {
+  color: #ffd43b;
+  font-size: 12px;
+  margin-right: 10px;
+  letter-spacing: 0.2em;
 }
 
 .animated-header {
@@ -58,6 +180,44 @@ body {
   font-size: 3rem;
   color: var(--text-color);
 }
+
+/* Slider Navigation  */
+.slider-navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(80px);
+  margin: 60px 0 12px 0;
+}
+.slider-navigation .nav-btn {
+  width: 12px;
+  height: 12px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+  transition: 0.3s ease;
+}
+.slider-navigation .nav-btn.active {
+  background: #2696e9;
+}
+.slider-navigation .nav-btn:not(:last-child) {
+  margin-right: 20px;
+}
+
+.slider-navigation .nav-btn:hover {
+  transform: scale(1.2);
+}
+
+#main {
+  border: 1px solid #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0px 10px 25px -8px #000;
+  width: 90%;
+  margin-top: 2rem;
+  padding-bottom: 70px;
+}
 .container {
   display: grid;
 }
@@ -66,7 +226,7 @@ body {
   position: relative;
   width: 56px;
   height: 56px;
-  background-color: var(--main-color);
+  background-color: #e5e4e2;
   box-shadow: 0 4px 24px hsla(222, 68%, 12%, 0.1);
   border-radius: 4rem;
   padding: 10px;
@@ -142,6 +302,10 @@ body {
   font-size: 2rem;
 }
 
+#favoriteButton {
+  cursor: pointer;
+}
+
 .btn {
   display: inline-block;
   padding: 1rem 0.8rem;
@@ -153,17 +317,36 @@ body {
   font-weight: bold;
   transition: 0.5s ease;
 }
-.sort-container {
+.heading {
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.2em;
+}
+.search_sort {
+  margin: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* gap: 2rem; */
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--snd-bg-color);
+}
+/* .sort-container {
   margin-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
   gap: 2rem;
   align-items: center;
-}
+} */
 
+.sort-container {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
 .sort-container select {
-  margin-bottom: 7px;
+  /* margin-bottom: 7px; */
   color: #313131;
   font-size: 14px;
   border: none;
@@ -184,11 +367,14 @@ body {
 
 .genre-dropdown-btn {
   padding: 1rem 2rem;
-  background: var(--main-color);
-  color: var(--bg-color);
+  /* background: var(--main-color); */
+  color: white;
   font-size: 1.3rem;
-  border-radius: 1rem;
-  box-shadow: 0 0 1rem var(--main-color);
+  border: none;
+  outline: none;
+  background: transparent;
+  /* border-radius: 1rem; */
+  /* box-shadow: 0 0 1rem var(--main-color); */
   letter-spacing: 0.1rem;
   font-weight: 600;
   transition: 0.5s ease;
@@ -231,17 +417,24 @@ body {
 
 #sort-select {
   padding: 1rem;
-  background: var(--main-color);
-  color: var(--bg-color);
+  /* background: var(--main-color);
+  color: var(--bg-color); */
+  color: white;
   font-size: 1.3rem;
-  border-radius: 1rem;
-  box-shadow: 0 0 1rem var(--main-color);
+  border: none;
+  outline: none;
+  background: transparent;
+  /* border-radius: 1rem; */
+  /* box-shadow: 0 0 1rem var(--main-color); */
   letter-spacing: 0.1rem;
   font-weight: 600;
   transition: 0.5s ease;
   cursor: pointer;
 }
 
+#sort-select:hover {
+  background-color: #007bff;
+}
 #sort-select option {
   padding: 0.5rem;
   font-size: 1rem;
@@ -252,9 +445,9 @@ body {
 }
 .movie-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .movie-card {
@@ -278,6 +471,30 @@ body {
   height: auto;
   display: block;
 }
+
+.heart-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  padding: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.heart-icon i {
+  font-size: 20px;
+  color: var(--main-color);
+}
+
+.heart-icon:hover {
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.heart-icon .liked i {
+  color: red;
+}
 .modal {
   display: none;
   position: fixed;
@@ -296,7 +513,7 @@ body {
   font-size: 1.2rem;
   padding: 20px;
   border: 1px solid var(--main-color);
-  width: 410px;
+  width: 400px;
   border-radius: 6px;
   position: relative;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -435,6 +652,7 @@ body {
   padding: 0 1rem 1rem;
   margin: 0.8rem;
   text-align: center;
+  color: white;
 }
 
 .movie-details {
@@ -503,7 +721,68 @@ body {
   padding: 3px;
 }
 
+.category {
+  margin-bottom: 60px;
+  padding: 0 40px;
+}
+
+.category-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+
+.section-heading {
+  font-size: 30px;
+  font-weight: 500;
+  margin: 60px 0;
+}
+.category-card {
+  position: relative;
+  height: 150px;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.category-card:hover .card-image {
+  transform: scale(1.1);
+}
+.category-card .name,
+.category-card .total {
+  position: absolute;
+  bottom: 20px;
+  color: white;
+  z-index: 20;
+}
+.category-card .name {
+  left: 20px;
+  font-size: 20px;
+}
+
+.category-card .total {
+  right: 20px;
+  font-size: 18px;
+  padding: 5px 8px;
+  border-radius: 8px;
+  background-color: hsla(218, 39%, 14%, 0.8);
+}
+.category-card::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(180deg, transparent 20%, #000a);
+}
+
+.category-card:hover .name {
+  color: hsl(214, 84%, 56%);
+}
 .footer {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -567,10 +846,87 @@ input::-webkit-inner-spin-button {
 }
 
 @media (max-width: 610px) {
+  .search {
+    height: 50px;
+    width: 50px;
+  }
+  .search_input {
+    width: calc(100% - 74px);
+  }
   .show-search {
     width: 100%;
   }
   .footer {
     padding: 2rem 1%;
+  }
+
+  .info {
+    grid-template-columns: 1fr;
+  }
+  .poster {
+    width: auto;
+    margin: auto;
+    max-height: 10.8em;
+  }
+  .modal-content {
+    width: 200px;
+  }
+}
+
+@media (max-width: 810px) {
+  header nav .logo_ul ul {
+    display: none; /* Hide the nav list by default on small screens */
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: var(--bg-color);
+    width: 100%;
+    border-top: 1px solid #ddd;
+  }
+
+  header nav .logo_ul ul.active {
+    display: flex;
+  }
+  header nav .logo_ul ul li {
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  header nav .logo_ul ul li a {
+    font-size: 1.2em;
+    color: var(--main-color);
+  }
+
+  .search__input {
+    width: 130px;
+  }
+  .show-search {
+    width: 190px;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .category-grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+  }
+  .menu-btn {
+    background: url(menu_icon.png) no-repeat;
+    background-size: 30px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
+  .menu-btn.active {
+    background: url(close_icon.png) no-repeat;
+    background-size: 30px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
   }
 }
